RESOLVED FIXED231416
defaultAlternateFormControlDesignEnabled() can't read UIUserInterfaceIdiom in the Web Content process
https://bugs.webkit.org/show_bug.cgi?id=231416
Summary defaultAlternateFormControlDesignEnabled() can't read UIUserInterfaceIdiom in...
Tim Horton
Reported 2021-10-08 01:38:27 PDT
defaultAlternateFormControlDesignEnabled() can't read UIUserInterfaceIdiom in the Web Content process
Attachments
Patch (3.11 KB, patch)
2021-10-08 01:38 PDT, Tim Horton
ews-feeder: commit-queue-
Patch (3.14 KB, patch)
2021-10-08 02:46 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2021-10-08 01:38:51 PDT
Tim Horton
Comment 2 2021-10-08 01:38:54 PDT
Tim Horton
Comment 3 2021-10-08 02:46:01 PDT
EWS
Comment 4 2021-10-08 11:08:09 PDT
Committed r283813 (242705@main): <https://commits.webkit.org/242705@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 440585 [details].
Note You need to log in before you can comment on or make changes to this bug.