defaultAlternateFormControlDesignEnabled() can't read UIUserInterfaceIdiom in the Web Content process https://bugs.webkit.org/show_bug.cgi?id=231416 <rdar://problem/84009054>

Reviewed by Anders Carlsson.

Source/WebKit:

It turns out WebPreferences default getters are run in the Web Content process,
which is a problem for defaultAlternateFormControlDesignEnabled because
it needs to consult with application state.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _setupPageConfiguration:]):
Explicitly initialize this preference in the UI process.

Source/WTF:

* Scripts/Preferences/WebPreferences.yaml:
Remove the autogenerated default.


Canonical link: https://commits.webkit.org/242705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283813 268f45cc-cd09-0410-ab3c-d52691b4dbfc